Modernise build.gradle