@@ -1,60 +1,38 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
-buildscript {
-    def myCustomKotlinVer = "2.2.0"
-
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$myCustomKotlinVer"
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:3.5.4"
-        classpath "io.spring.gradle:dependency-management-plugin:1.1.7"
-        classpath "org.jetbrains.kotlin:kotlin-allopen:$myCustomKotlinVer"
-        classpath "org.jetbrains.kotlin:kotlin-noarg:$myCustomKotlinVer"
-    }
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '2.2.21'
+    id 'org.jetbrains.kotlin.plugin.spring' version '2.2.21'
+    id 'org.springframework.boot' version '4.0.4'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
-apply plugin: 'java'
-apply plugin: 'kotlin'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: "kotlin-spring"
-apply plugin: "kotlin-jpa"
+group = 'net.ivanvzykov'
+version = '0.0.1-SNAPSHOT'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
+    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
-    testImplementation(platform("org.junit:junit-bom:5.12.2"))     // Syncs JUnit 5 versions
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'junit:junit:4.13.2'                        // JUnit 4 API (for Hyperskill's integration tests)
-    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
-    // Run JUnit 4 on JUnit Platform. Version comes from the BOM
+    implementation 'tools.jackson.module:jackson-module-kotlin'
+    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    // Helpful for Gradle/IDE runs. Version comes from the BOM
 }
 
-tasks.withType(KotlinCompile) {
-    kotlinOptions {
-        freeCompilerArgs = ['-Xjsr305=strict', '-Xannotation-default-target=param-property']
-        jvmTarget = String.valueOf(21)
+kotlin {
+    compilerOptions {
+        freeCompilerArgs.addAll '-Xjsr305=strict', '-Xannotation-default-target=param-property'
     }
 }
 
-test {
-    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+tasks.named('test') {
     useJUnitPlatform()
-}
-
-tasks.register('listGradlePlugins') {
-    project.plugins.each {
-        println it
-    }
 }
